overlap issue

--- a/public/stylesheets/scss/main.scss
+++ b/public/stylesheets/scss/main.scss
@@ -92,7 +92,7 @@ header {
 }
 .app-actions {
   float: right;
-  min-width: 1000px;
+  min-width: 260px;
   position: relative;
   .button, button {
     float: right;
